--- a/index.html
+++ b/index.html
@@ -739,10 +739,10 @@
             <div class="container-fluid">
                 <div class="container">
                     <div class="footer-info">
-                        <h2>Kate Winslet</h2>
-                        <h3>123 Street, New York, USA</h3>
+                        <h2>KARAN YADAV</h2>
+                        <h3>Nepal</h3>
                         <div class="footer-menu">
-                            <p>+012 345 67890</p>
+                            <p>+99999999999</p>
                             <p>info@example.com</p>
                         </div>
                         <div class="footer-social">
