--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand">DevFolio</a>
+                <a href="index.html" class="navbar-brand">Portfolio</a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -92,7 +92,6 @@
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
                             </div>
                             <div class="about-text">
                                 <p>
