--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/about.jpg" alt="Image">
+                            <img src="img/Screenshot 2024-10-10 164527.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
