Remove phone number displays

--- a/clinic.html
+++ b/clinic.html
@@ -247,7 +247,7 @@
                     <div class="timeline-item right wow slideInRight" data-wow-delay="0.1s">
                         <div class="timeline-text">
                             <div class="timeline-date">Booking</div>
-                            <h2>Phone or Email</h2>
+                            <h2>Email Coordination</h2>
                             <h4>hello@shanticlinic.invalid</h4>
                             <p>
                                 Share your symptoms, preferred slots, and any prior reports. Our care team responds within one business day.
@@ -279,7 +279,7 @@
                                     <i class="fa fa-phone"></i>
                                     <div>
                                         <h4>Phone</h4>
-                                        <p><a href="tel:+9770000000000">+977 00000 00000</a></p>
+                                        <p>Available upon request via email</p>
                                     </div>
                                 </div>
                                 <div class="info-block">
@@ -341,7 +341,7 @@
                         <h2>Shanti Care Clinic</h2>
                         <h3>Kathmandu, Nepal</h3>
                         <div class="footer-menu">
-                            <p><a href="tel:+9770000000000">+977 00000 00000</a></p>
+                            <p>Phone available upon request</p>
                             <p><a href="mailto:hello@shanticlinic.invalid">hello@shanticlinic.invalid</a></p>
                         </div>
                         <div class="footer-social">
