--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 <ul>
                                     <li><i class="fa fa-map-marker-alt"></i> Kathmandu, Nepal</li>
                                     <li><i class="fa fa-clock"></i> Sunday - Friday: 7:00 AM – 6:00 PM | Saturday: On-call</li>
-                                    <li><i class="fa fa-phone"></i> +977 00000 00000</li>
+                                    <li><i class="fa fa-phone"></i> Phone available upon request</li>
                                 </ul>
                                 <a class="btn" href="clinic.html">Book an Appointment</a>
                             </div>
@@ -679,8 +679,8 @@
                                 <div class="info-block">
                                     <i class="fa fa-phone"></i>
                                     <div>
-                                        <h4>Call</h4>
-                                        <p><a href="tel:+9770000000000">+977 00000 00000</a></p>
+                                        <h4>Phone</h4>
+                                        <p>Available upon request via email</p>
                                     </div>
                                 </div>
                                 <div class="info-block">
@@ -797,7 +797,7 @@
                         <h2>Dr. Karan Kumar Yadav</h2>
                         <h3>Kathmandu, Nepal</h3>
                         <div class="footer-menu">
-                            <p><a href="tel:+9770000000000">+977 00000 00000</a></p>
+                            <p>Phone available upon request</p>
                             <p><a href="mailto:hello@shanticlinic.invalid">hello@shanticlinic.invalid</a></p>
                         </div>
                         <div class="footer-social">
