--- a/index.html
+++ b/index.html
@@ -67,11 +67,16 @@
                                 <div class="typed-text">MBBS Graduate 2025, Compassionate Clinician, Community Health Advocate, Lifelong Learner</div>
                             </div>
                             <div class="hero-btn">
-                                <a class="btn" href="clinic.html">Visit My Clinic</a>
+    <a class="btn" href="clinic.html">Visit My Clinic</a>
 
-                                <a class="btn" href="#clinic">Visit My Clinic</a>
-                                <a class="btn btn-outline" href="#contact">Connect</a>
-                            </div>
+    <a class="btn" href="https://syanpse.vercel.app/team" target="_blank">
+        GO TO SYNAPSE 2026 PAGE
+    </a>
+
+    <a class="btn" href="#clinic">Visit My Clinic</a>
+    <a class="btn btn-outline" href="#contact">Connect</a>
+</div>
+
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
