--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@
                             <div class="hero-btn">
     <a class="btn" href="clinic.html">Visit My Clinic</a>
 
-    <a class="btn btn-orange" href="https://syanpse.vercel.app/team" target="_blank">
+    <a class="btn" href="https://syanpse.vercel.app/team" target="_blank">
         GO TO SYNAPSE 2026 PAGE
     </a>
 
     <a class="btn" href="#clinic">Visit My Clinic</a>
     <a class="btn btn-outline" href="#contact">Connect</a>
 </div>
-
-
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 d-none d-md-block">
