--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                             <div class="hero-btn">
     <a class="btn" href="clinic.html">Visit My Clinic</a>
 
-    <a class="btn" href="https://syanpse.vercel.app" target="_blank">
+    <a class="btn" href="https://synapse-puce.vercel.app/" target="_blank">
         GO TO SYNAPSE 2026 PAGE
     </a>
 
